<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BudgetEdit">

    <TextView
        android:id="@+id/txt_BudgetEditHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_budget_edit_header"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rg_BudgetEditRoleOver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/eTxt_BudgetEditName"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:digits="@string/txt_filter"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/budget_name"
        android:inputType="text"
        android:maxLength="25"
        app:layout_constraintBottom_toTopOf="@+id/eTxt_BudgetEditAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_BudgetEditRoleOver" />


    <LinearLayout
        android:id="@+id/layout_BudgetEditImagePick"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="249dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_BudgetEditDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_BudgetEditImagePick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:text="@string/budget_img_pick" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_BudgetEditIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:srcCompat="@android:drawable/ic_dialog_info" />

            <TextView
                android:id="@+id/tv_budgetEditCatName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:hint="Budget" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/eTxt_BudgetEditAmount"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="228dp"
        android:layout_marginBottom="39dp"
        android:drawableLeft="@drawable/ic_baseline_attach_money_24"
        android:ems="10"
        android:hint="@string/goal_target"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/layout_BudgetEditImagePick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_BudgetEditRoleOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:checkedButton="@id/radioButton_BudgetMonthly"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_BudgetEditMonthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_monthly"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton_BudgetEditWeekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/budget_weekly"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_BudgetEditCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cancel_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_BudgetEditDelete"
        app:layout_constraintStart_toEndOf="@+id/btn_BudgetEditSave" />

    <Button
        android:id="@+id/btn_BudgetEditSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="20dp"
        android:text="@string/save_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_BudgetEditDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/delete_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_BudgetEditImagePick" />


</androidx.constraintlayout.widget.ConstraintLayout>